--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
   <title>Hechos Relevantes</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Estilos -->
-  <link rel="stylesheet" href="assets/styles.css">
-  <link rel="stylesheet" href="assets/tabs.css">
+  <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="stylesheet" href="assets/tabs.css" />
 
-  <!-- Librería docx -->
+  <!-- Librería docx para generar Word -->
   <script defer src="https://cdn.jsdelivr.net/npm/docx@8.5.0/build/index.umd.min.js"></script>
+
+  <!-- Lógica -->
   <script defer src="assets/tabs.js"></script>
   <script defer src="assets/formatter.js"></script>
   <script defer src="assets/app.js"></script>
@@ -18,174 +20,226 @@
 <body>
   <header>
     <h1>Hechos Relevantes</h1>
-    <img src="assets/LogoDDIC.png" alt="Logo DDIC" class="logo">
+    <!-- Colocá tu logo en assets/LogoDDIC.png -->
+    <img src="assets/LogoDDIC.png" alt="Logo DDIC" class="logo" />
   </header>
 
   <main>
-    <!-- Tabs -->
-    <section>
-      <h2>1) Carga de datos</h2>
-      <div class="tabs">
-        <button class="tab-button active" data-tab="generales">Datos generales</button>
-        <button class="tab-button" data-tab="civiles">Civiles</button>
-        <button class="tab-button" data-tab="fuerzas">Personal Fuerzas</button>
-        <button class="tab-button" data-tab="objetos">Objetos</button>
-        <button class="tab-button" data-tab="catalogos">Catálogos</button>
-      </div>
+    <!-- TABS -->
+    <div class="tabs">
+      <div class="tab active" data-target="tab-generales">Datos Generales</div>
+      <div class="tab" data-target="tab-civiles">Civiles</div>
+      <div class="tab" data-target="tab-fuerzas">Personal Fuerzas</div>
+      <div class="tab" data-target="tab-objetos">Objetos</div>
+      <div class="tab" data-target="tab-preview">Vista Previa</div>
+      <div class="tab" data-target="tab-casos">Casos Guardados</div>
+    </div>
 
-      <div class="tab-content active" id="generales">
-        <!-- Datos generales -->
-        <label>Fecha <input type="date" id="g_fecha_dia"></label>
-        <label>Tipo
-          <select id="g_tipoExp">
-            <option value="PU">PU</option>
-            <option value="IPP">IPP</option>
-            <option value="OTRO">OTRO</option>
-          </select>
-        </label>
-        <label>Número <input type="text" id="g_numExp"></label>
-        <label>Partido
-          <select id="g_partido"></select>
-        </label>
-        <label>Localidad
-          <select id="g_localidad"></select>
-        </label>
-        <label>Dependencia
-          <select id="g_dep"></select>
-        </label>
-        <div id="g_dep_manual_wrap" style="display:none;">
-          <input type="text" id="g_dep_manual" placeholder="Dependencia manual">
-        </div>
-        <label>Carátula <input type="text" id="g_car"></label>
-        <label>Subtítulo <input type="text" id="g_sub"></label>
-        <label>Estado
-          <select id="g_ok">
-            <option value="no">No esclarecido</option>
-            <option value="si">Esclarecido</option>
-          </select>
-        </label>
-        <label>UFI <input type="text" id="g_ufi"></label>
-        <label>Coordenadas <input type="text" id="g_coord"></label>
-        <label><input type="checkbox" id="g_relevante"> Relevante</label>
-        <label><input type="checkbox" id="g_supervisado"> Supervisado</label>
-      </div>
+    <!-- TAB: GENERALES -->
+    <div id="tab-generales" class="tab-content active">
+      <h2>Datos Generales</h2>
 
-      <div class="tab-content" id="civiles">
-        <h3>Civiles</h3>
-        <input type="text" id="c_nombre" placeholder="Nombre">
-        <input type="text" id="c_apellido" placeholder="Apellido">
-        <input type="number" id="c_edad" placeholder="Edad">
-        <select id="c_genero">
-          <option value="">-</option>
-          <option value="M">M</option>
-          <option value="F">F</option>
+      <label>Fecha:
+        <input type="date" id="g_fecha_dia" />
+      </label>
+
+      <label>Tipo:
+        <select id="g_tipoExp">
+          <option value="PU">PU</option>
+          <option value="IPP">IPP</option>
+          <option value="Otro">Otro</option>
         </select>
-        <input type="text" id="c_dni" placeholder="DNI">
-        <input type="text" id="c_pais" placeholder="País de origen">
-        <input type="text" id="c_loc" placeholder="Localidad domicilio">
-        <input type="text" id="c_calle" placeholder="Calle domicilio">
+      </label>
+
+      <label>Número:
+        <input type="text" id="g_numExp" placeholder="Ej: 270840" />
+      </label>
+
+      <label>Partido:
+        <select id="g_partido"></select>
+      </label>
+
+      <label>Localidad:
+        <select id="g_localidad"></select>
+      </label>
+
+      <label>Dependencia:
+        <select id="g_dep"></select>
+      </label>
+      <span id="g_dep_manual_wrap" style="display:none">
+        <input type="text" id="g_dep_manual" placeholder="Dependencia manual" />
+      </span>
+
+      <label>Carátula:
+        <input type="text" id="g_car" placeholder="Robo agravado, Homicidio, etc." />
+      </label>
+
+      <label>Subtítulo:
+        <input type="text" id="g_sub" placeholder="Entradera, Hallazgo, etc." />
+      </label>
+
+      <label>Esclarecido:
+        <select id="g_ok">
+          <option value="no">No</option>
+          <option value="si">Sí</option>
+        </select>
+      </label>
+
+      <label>UFI:
+        <input type="text" id="g_ufi" placeholder="UFI / Intervención" />
+      </label>
+
+      <label>Coordenadas:
+        <input type="text" id="g_coord" placeholder="-38.0, -57.5" />
+      </label>
+
+      <label><input type="checkbox" id="g_relevante" /> Relevante</label>
+      <label><input type="checkbox" id="g_supervisado" /> Supervisado</label>
+
+      <h3>Cuerpo del Hecho</h3>
+      <textarea id="cuerpo" rows="10" placeholder="Redactá el hecho. Podés insertar etiquetas como #victima:0, #pf:0, #secuestro:0, #sustraccion:0, #hallazgo:0, #otro:0"></textarea>
+
+      <div id="tagHelper" style="margin-top:8px;"></div>
+    </div>
+
+    <!-- TAB: CIVILES -->
+    <div id="tab-civiles" class="tab-content">
+      <h2>Involucrados Civiles</h2>
+      <label>Nombre: <input type="text" id="c_nombre" /></label>
+      <label>Apellido: <input type="text" id="c_apellido" /></label>
+      <label>Edad: <input type="text" id="c_edad" /></label>
+      <label>Género: <input type="text" id="c_genero" placeholder="M / F" /></label>
+      <label>DNI: <input type="text" id="c_dni" /></label>
+      <label>País: <input type="text" id="c_pais" placeholder="Nacionalidad" /></label>
+      <label>Calle: <input type="text" id="c_calle" placeholder="Calle y número" /></label>
+      <label>Localidad: <input type="text" id="c_loc" placeholder="Ciudad" /></label>
+
+      <label>Vínculo:
         <select id="c_vinculo">
-          <option>Victima</option>
-          <option>Imputado</option>
-          <option>Testigo</option>
+          <option value="victima">Víctima</option>
+          <option value="imputado">Imputado</option>
+          <option value="sindicado">Sindicado</option>
+          <option value="denunciante">Denunciante</option>
+          <option value="testigo">Testigo</option>
         </select>
+      </label>
+
+      <label>Fallecido:
         <select id="c_obito">
           <option value="false">No</option>
           <option value="true">Sí</option>
         </select>
+      </label>
+
+      <div class="btn-row">
         <button class="btn" id="addCivil">Agregar involucrado</button>
-        <div id="civilesList"></div>
       </div>
 
-      <div class="tab-content" id="fuerzas">
-        <h3>Personal de Fuerzas</h3>
-        <input type="text" id="f_nombre" placeholder="Nombre">
-        <input type="text" id="f_apellido" placeholder="Apellido">
-        <input type="number" id="f_edad" placeholder="Edad">
-        <input type="text" id="f_fuerza" placeholder="Fuerza">
-        <input type="text" id="f_jerarquia" placeholder="Jerarquía">
-        <input type="text" id="f_legajo" placeholder="Legajo">
-        <input type="text" id="f_destino" placeholder="Destino">
-        <input type="text" id="f_loc" placeholder="Localidad domicilio">
-        <input type="text" id="f_calle" placeholder="Calle domicilio">
+      <div id="civilesList"></div>
+    </div>
+
+    <!-- TAB: FUERZAS -->
+    <div id="tab-fuerzas" class="tab-content">
+      <h2>Personal de Fuerzas</h2>
+      <label>Nombre: <input type="text" id="f_nombre" /></label>
+      <label>Apellido: <input type="text" id="f_apellido" /></label>
+      <label>Edad: <input type="text" id="f_edad" /></label>
+      <label>Fuerza: <input type="text" id="f_fuerza" placeholder="Policía, Prefectura, etc." /></label>
+      <label>Jerarquía: <input type="text" id="f_jerarquia" /></label>
+      <label>Legajo: <input type="text" id="f_legajo" /></label>
+      <label>Destino: <input type="text" id="f_destino" /></label>
+      <label>Calle: <input type="text" id="f_calle" /></label>
+      <label>Localidad: <input type="text" id="f_loc" /></label>
+
+      <label>Vínculo:
         <select id="f_vinculo">
-          <option>Imputado</option>
-          <option>Testigo</option>
+          <option value="interviniente">Interviniente</option>
+          <option value="aprehendido">Aprehendido</option>
+          <option value="detenido">Detenido</option>
         </select>
+      </label>
+
+      <label>Fallecido:
         <select id="f_obito">
           <option value="false">No</option>
           <option value="true">Sí</option>
         </select>
+      </label>
+
+      <div class="btn-row">
         <button class="btn" id="addFuerza">Agregar personal</button>
-        <div id="fuerzasList"></div>
       </div>
 
-      <div class="tab-content" id="objetos">
-        <h3>Objetos</h3>
-        <input type="text" id="o_desc" placeholder="Descripción">
+      <div id="fuerzasList"></div>
+    </div>
+
+    <!-- TAB: OBJETOS -->
+    <div id="tab-objetos" class="tab-content">
+      <h2>Objetos</h2>
+      <label>Descripción: <input type="text" id="o_desc" placeholder="Ej: Celular iPhone 13, $2.000.000, etc." /></label>
+      <label>Vínculo:
         <select id="o_vinc">
-          <option>Secuestro</option>
-          <option>Sustracción</option>
+          <option value="secuestro">Secuestro</option>
+          <option value="sustraccion">Sustracción</option>
+          <option value="hallazgo">Hallazgo</option>
+          <option value="otro">Otro</option>
         </select>
+      </label>
+
+      <div class="btn-row">
         <button class="btn" id="addObjeto">Agregar objeto</button>
-        <div id="objetosList"></div>
       </div>
 
-      <div class="tab-content" id="catalogos">
-        <h3>Catálogos</h3>
-        <label>Partido
-          <select id="cat_partidoSel"></select>
-        </label>
-        <textarea id="cat_localidades"></textarea>
-        <textarea id="cat_dependencias"></textarea>
-        <button id="cat_guardar" class="btn">Guardar catálogo</button>
-        <button id="cat_reset" class="btn ghost">Restaurar ejemplo</button>
-      </div>
-    </section>
+      <div id="objetosList"></div>
+    </div>
 
-    <section>
-      <h2>2) Resumen / Cuerpo</h2>
-      <textarea id="cuerpo" placeholder="Redactá el cuerpo..." rows="12"></textarea>
-      <div id="tagHelper"></div>
-    </section>
-
-    <section>
-      <h2>3) Vista previa</h2>
-      <div id="tituloCompuesto"></div>
-      <div id="subCompuesto"></div>
+    <!-- TAB: VISTA PREVIA -->
+    <div id="tab-preview" class="tab-content">
+      <h2>Vista Previa</h2>
+      <div id="tituloCompuesto" style="font-weight:bold; margin-bottom:4px;"></div>
+      <div id="subCompuesto" style="margin-bottom:8px;"></div>
       <div id="previewHtml" class="preview"></div>
-    </section>
 
-    <section>
-      <h2>4) Acciones</h2>
-      <input type="text" id="caseName" placeholder="Nombre del hecho">
       <div class="btn-row">
         <button class="btn" id="generar">Generar</button>
         <button class="btn" id="copiarWA">Copiar WhatsApp</button>
         <button class="btn" id="descargarWord">Descargar Word</button>
-        <button class="btn" id="downloadWordMulti">Word Multi</button>
-        <button class="btn" id="exportCSV">Exportar CSV</button>
-        <button class="btn ghost" id="clearAll">Limpiar</button>
+        <button class="btn" id="exportCSV1">Exportar CSV</button>
+        <button class="btn ghost" id="clearAll">Borrar todo</button>
       </div>
-    </section>
+    </div>
 
-    <section>
-      <h2>5) Hechos guardados</h2>
-      <input type="text" id="caseSearch" placeholder="Buscar hechos...">
-      <div id="casesList"></div>
+    <!-- TAB: CASOS GUARDADOS -->
+    <div id="tab-casos" class="tab-content">
+      <h2>Casos Guardados</h2>
+      <input type="text" id="caseSearch" placeholder="Buscar por texto..." />
+
+      <div id="casesList" style="margin-top:10px;"></div>
+
+      <div style="margin-top:10px;">
+        <label>Nombre caso:
+          <input type="text" id="caseName" placeholder="Nombre del hecho (se autocompleta al guardar)" />
+        </label>
+      </div>
+
       <div class="btn-row">
         <button class="btn" id="saveCase">Guardar</button>
         <button class="btn" id="updateCase">Actualizar</button>
-        <button class="btn" id="deleteCase">Eliminar</button>
+        <button class="btn ghost" id="deleteCase">Borrar</button>
         <button class="btn" id="loadSelected">Cargar</button>
-        <button class="btn" id="exportCSV1">Exportar CSV 1</button>
-        <button class="btn ghost" id="backupJSON">Backup JSON</button>
-        <button class="btn ghost" id="restoreJSON">Restaurar JSON</button>
-        <button class="btn ghost" id="mergeJSON">Fusionar JSON</button>
-        <input type="file" id="restoreFile" style="display:none;">
-        <input type="file" id="mergeFile" style="display:none;">
+
+        <button class="btn" id="downloadWordMulti">Word Multi</button>
+        <button class="btn" id="exportCSV">CSV Multi</button>
+
+        <button class="btn" id="backupJSON">Backup JSON</button>
+        <button class="btn" id="restoreJSON">Restaurar JSON</button>
+        <button class="btn" id="mergeJSON">Fusionar JSON</button>
       </div>
-    </section>
+
+      <!-- Inputs ocultos para restaurar/fusionar -->
+      <input type="file" id="restoreFile" style="display:none" accept=".json" />
+      <input type="file" id="mergeFile" style="display:none" accept=".json" />
+    </div>
   </main>
 </body>
 </html>
