--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Hechos Relevantes</title>
+  <title>Hechos Relevantes — V9</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Estilos -->
+  <!-- Estilos V9 -->
   <link rel="stylesheet" href="assets/styles.css" />
   <link rel="stylesheet" href="assets/tabs.css" />
 
-  <!-- Librería docx para generar Word -->
+  <!-- Librería docx (Word) -->
   <script defer src="https://cdn.jsdelivr.net/npm/docx@8.5.0/build/index.umd.min.js"></script>
 
   <!-- Lógica -->
@@ -18,186 +18,174 @@
   <script defer src="assets/app.js"></script>
 </head>
 <body>
-  <header>
-    <h1>Hechos Relevantes</h1>
-    <!-- Colocá tu logo en assets/LogoDDIC.png -->
+  <header class="hdr">
+    <div class="hdr-left">
+      <h1 class="app-title">Hechos Relevantes</h1>
+      <div class="version">V9</div>
+    </div>
     <img src="assets/LogoDDIC.png" alt="Logo DDIC" class="logo" />
   </header>
 
-  <main>
-    <!-- TABS -->
-    <div class="tabs">
-      <div class="tab active" data-target="tab-generales">Datos Generales</div>
-      <div class="tab" data-target="tab-civiles">Civiles</div>
-      <div class="tab" data-target="tab-fuerzas">Personal Fuerzas</div>
-      <div class="tab" data-target="tab-objetos">Objetos</div>
-      <div class="tab" data-target="tab-preview">Vista Previa</div>
-      <div class="tab" data-target="tab-casos">Casos Guardados</div>
+  <main class="container">
+    <!-- Tabs -->
+    <div class="tabs card">
+      <button class="tab active" data-target="tab-generales">Datos Generales</button>
+      <button class="tab" data-target="tab-civiles">Civiles</button>
+      <button class="tab" data-target="tab-fuerzas">Personal Fuerzas</button>
+      <button class="tab" data-target="tab-objetos">Objetos</button>
+      <button class="tab" data-target="tab-preview">Vista Previa</button>
+      <button class="tab" data-target="tab-casos">Casos Guardados</button>
     </div>
 
-    <!-- TAB: GENERALES -->
-    <div id="tab-generales" class="tab-content active">
+    <!-- Generales -->
+    <section id="tab-generales" class="tab-content active card">
       <h2>Datos Generales</h2>
-
-      <label>Fecha:
-        <input type="date" id="g_fecha_dia" />
-      </label>
-
-      <label>Tipo:
-        <select id="g_tipoExp">
-          <option value="PU">PU</option>
-          <option value="IPP">IPP</option>
-          <option value="Otro">Otro</option>
-        </select>
-      </label>
-
-      <label>Número:
-        <input type="text" id="g_numExp" placeholder="Ej: 270840" />
-      </label>
-
-      <label>Partido:
-        <select id="g_partido"></select>
-      </label>
-
-      <label>Localidad:
-        <select id="g_localidad"></select>
-      </label>
-
-      <label>Dependencia:
-        <select id="g_dep"></select>
-      </label>
-      <span id="g_dep_manual_wrap" style="display:none">
-        <input type="text" id="g_dep_manual" placeholder="Dependencia manual" />
-      </span>
-
-      <label>Carátula:
-        <input type="text" id="g_car" placeholder="Robo agravado, Homicidio, etc." />
-      </label>
-
-      <label>Subtítulo:
-        <input type="text" id="g_sub" placeholder="Entradera, Hallazgo, etc." />
-      </label>
-
-      <label>Esclarecido:
-        <select id="g_ok">
-          <option value="no">No</option>
-          <option value="si">Sí</option>
-        </select>
-      </label>
-
-      <label>UFI:
-        <input type="text" id="g_ufi" placeholder="UFI / Intervención" />
-      </label>
-
-      <label>Coordenadas:
-        <input type="text" id="g_coord" placeholder="-38.0, -57.5" />
-      </label>
-
-      <label><input type="checkbox" id="g_relevante" /> Relevante</label>
-      <label><input type="checkbox" id="g_supervisado" /> Supervisado</label>
+      <div class="grid g2">
+        <label>Fecha
+          <input type="date" id="g_fecha_dia" />
+        </label>
+        <label>Tipo
+          <select id="g_tipoExp">
+            <option value="PU">PU</option>
+            <option value="IPP">IPP</option>
+            <option value="Otro">Otro</option>
+          </select>
+        </label>
+        <label>Número
+          <input type="text" id="g_numExp" placeholder="Ej: 270840" />
+        </label>
+        <label>Partido
+          <select id="g_partido"></select>
+        </label>
+        <label>Localidad
+          <select id="g_localidad"></select>
+        </label>
+        <label>Dependencia
+          <select id="g_dep"></select>
+        </label>
+        <div id="g_dep_manual_wrap" class="full" style="display:none">
+          <input type="text" id="g_dep_manual" placeholder="Dependencia manual" />
+        </div>
+        <label>Carátula
+          <input type="text" id="g_car" placeholder="Robo, Homicidio, etc." />
+        </label>
+        <label>Subtítulo
+          <input type="text" id="g_sub" placeholder="Entradera, Hallazgo, etc." />
+        </label>
+        <label>Esclarecido
+          <select id="g_ok">
+            <option value="no">No</option>
+            <option value="si">Sí</option>
+          </select>
+        </label>
+        <label>UFI
+          <input type="text" id="g_ufi" placeholder="UFI / Intervención" />
+        </label>
+        <label>Coordenadas
+          <input type="text" id="g_coord" placeholder="-38.0, -57.5" />
+        </label>
+        <label class="chk"><input type="checkbox" id="g_relevante" /> Relevante</label>
+        <label class="chk"><input type="checkbox" id="g_supervisado" /> Supervisado</label>
+      </div>
 
       <h3>Cuerpo del Hecho</h3>
-      <textarea id="cuerpo" rows="10" placeholder="Redactá el hecho. Podés insertar etiquetas como #victima:0, #pf:0, #secuestro:0, #sustraccion:0, #hallazgo:0, #otro:0"></textarea>
+      <textarea id="cuerpo" rows="12" class="full" placeholder="Redactá el hecho. Podés insertar etiquetas como #victima:0, #pf:0, #secuestro:0, #sustraccion:0, #hallazgo:0, #otro:0"></textarea>
 
-      <div id="tagHelper" style="margin-top:8px;"></div>
-    </div>
+      <div id="tagHelper" class="chips"></div>
+    </section>
 
-    <!-- TAB: CIVILES -->
-    <div id="tab-civiles" class="tab-content">
+    <!-- Civiles -->
+    <section id="tab-civiles" class="tab-content card">
       <h2>Involucrados Civiles</h2>
-      <label>Nombre: <input type="text" id="c_nombre" /></label>
-      <label>Apellido: <input type="text" id="c_apellido" /></label>
-      <label>Edad: <input type="text" id="c_edad" /></label>
-      <label>Género: <input type="text" id="c_genero" placeholder="M / F" /></label>
-      <label>DNI: <input type="text" id="c_dni" /></label>
-      <label>País: <input type="text" id="c_pais" placeholder="Nacionalidad" /></label>
-      <label>Calle: <input type="text" id="c_calle" placeholder="Calle y número" /></label>
-      <label>Localidad: <input type="text" id="c_loc" placeholder="Ciudad" /></label>
-
-      <label>Vínculo:
-        <select id="c_vinculo">
-          <option value="victima">Víctima</option>
-          <option value="imputado">Imputado</option>
-          <option value="sindicado">Sindicado</option>
-          <option value="denunciante">Denunciante</option>
-          <option value="testigo">Testigo</option>
-        </select>
-      </label>
-
-      <label>Fallecido:
-        <select id="c_obito">
-          <option value="false">No</option>
-          <option value="true">Sí</option>
-        </select>
-      </label>
-
+      <div class="grid g3">
+        <label>Nombre <input type="text" id="c_nombre" /></label>
+        <label>Apellido <input type="text" id="c_apellido" /></label>
+        <label>Edad <input type="text" id="c_edad" /></label>
+        <label>Género <input type="text" id="c_genero" placeholder="M / F" /></label>
+        <label>DNI <input type="text" id="c_dni" /></label>
+        <label>País <input type="text" id="c_pais" placeholder="Nacionalidad" /></label>
+        <label class="g2">Calle <input type="text" id="c_calle" placeholder="Calle y número" /></label>
+        <label>Localidad <input type="text" id="c_loc" placeholder="Ciudad" /></label>
+        <label>Vínculo
+          <select id="c_vinculo">
+            <option value="victima">Víctima</option>
+            <option value="imputado">Imputado</option>
+            <option value="sindicado">Sindicado</option>
+            <option value="denunciante">Denunciante</option>
+            <option value="testigo">Testigo</option>
+          </select>
+        </label>
+        <label>Fallecido
+          <select id="c_obito">
+            <option value="false">No</option>
+            <option value="true">Sí</option>
+          </select>
+        </label>
+      </div>
       <div class="btn-row">
         <button class="btn" id="addCivil">Agregar involucrado</button>
       </div>
+      <div id="civilesList" class="table-wrap"></div>
+    </section>
 
-      <div id="civilesList"></div>
-    </div>
-
-    <!-- TAB: FUERZAS -->
-    <div id="tab-fuerzas" class="tab-content">
-      <h2>Personal de Fuerzas</h2>
-      <label>Nombre: <input type="text" id="f_nombre" /></label>
-      <label>Apellido: <input type="text" id="f_apellido" /></label>
-      <label>Edad: <input type="text" id="f_edad" /></label>
-      <label>Fuerza: <input type="text" id="f_fuerza" placeholder="Policía, Prefectura, etc." /></label>
-      <label>Jerarquía: <input type="text" id="f_jerarquia" /></label>
-      <label>Legajo: <input type="text" id="f_legajo" /></label>
-      <label>Destino: <input type="text" id="f_destino" /></label>
-      <label>Calle: <input type="text" id="f_calle" /></label>
-      <label>Localidad: <input type="text" id="f_loc" /></label>
-
-      <label>Vínculo:
-        <select id="f_vinculo">
-          <option value="interviniente">Interviniente</option>
-          <option value="aprehendido">Aprehendido</option>
-          <option value="detenido">Detenido</option>
-        </select>
-      </label>
-
-      <label>Fallecido:
-        <select id="f_obito">
-          <option value="false">No</option>
-          <option value="true">Sí</option>
-        </select>
-      </label>
-
+    <!-- Fuerzas -->
+    <section id="tab-fuerzas" class="tab-content card">
+      <h2>Personal Fuerzas</h2>
+      <div class="grid g3">
+        <label>Nombre <input type="text" id="f_nombre" /></label>
+        <label>Apellido <input type="text" id="f_apellido" /></label>
+        <label>Edad <input type="text" id="f_edad" /></label>
+        <label>Fuerza <input type="text" id="f_fuerza" placeholder="Policía, Prefectura…" /></label>
+        <label>Jerarquía <input type="text" id="f_jerarquia" /></label>
+        <label>Legajo <input type="text" id="f_legajo" /></label>
+        <label>Destino <input type="text" id="f_destino" /></label>
+        <label class="g2">Calle <input type="text" id="f_calle" /></label>
+        <label>Localidad <input type="text" id="f_loc" /></label>
+        <label>Vínculo
+          <select id="f_vinculo">
+            <option value="interviniente">Interviniente</option>
+            <option value="aprehendido">Aprehendido</option>
+            <option value="detenido">Detenido</option>
+          </select>
+        </label>
+        <label>Fallecido
+          <select id="f_obito">
+            <option value="false">No</option>
+            <option value="true">Sí</option>
+          </select>
+        </label>
+      </div>
       <div class="btn-row">
         <button class="btn" id="addFuerza">Agregar personal</button>
       </div>
+      <div id="fuerzasList" class="table-wrap"></div>
+    </section>
 
-      <div id="fuerzasList"></div>
-    </div>
-
-    <!-- TAB: OBJETOS -->
-    <div id="tab-objetos" class="tab-content">
+    <!-- Objetos -->
+    <section id="tab-objetos" class="tab-content card">
       <h2>Objetos</h2>
-      <label>Descripción: <input type="text" id="o_desc" placeholder="Ej: Celular iPhone 13, $2.000.000, etc." /></label>
-      <label>Vínculo:
-        <select id="o_vinc">
-          <option value="secuestro">Secuestro</option>
-          <option value="sustraccion">Sustracción</option>
-          <option value="hallazgo">Hallazgo</option>
-          <option value="otro">Otro</option>
-        </select>
-      </label>
-
+      <div class="grid g3">
+        <label class="g2">Descripción <input type="text" id="o_desc" placeholder="Celular iPhone 13, $2.000.000…" /></label>
+        <label>Vínculo
+          <select id="o_vinc">
+            <option value="secuestro">Secuestro</option>
+            <option value="sustraccion">Sustracción</option>
+            <option value="hallazgo">Hallazgo</option>
+            <option value="otro">Otro</option>
+          </select>
+        </label>
+      </div>
       <div class="btn-row">
         <button class="btn" id="addObjeto">Agregar objeto</button>
       </div>
+      <div id="objetosList" class="table-wrap"></div>
+    </section>
 
-      <div id="objetosList"></div>
-    </div>
-
-    <!-- TAB: VISTA PREVIA -->
-    <div id="tab-preview" class="tab-content">
+    <!-- Vista previa -->
+    <section id="tab-preview" class="tab-content card">
       <h2>Vista Previa</h2>
-      <div id="tituloCompuesto" style="font-weight:bold; margin-bottom:4px;"></div>
-      <div id="subCompuesto" style="margin-bottom:8px;"></div>
+      <div id="tituloCompuesto" class="title-preview"></div>
+      <div id="subCompuesto" class="subtitle-preview"></div>
       <div id="previewHtml" class="preview"></div>
 
       <div class="btn-row">
@@ -207,18 +195,18 @@
         <button class="btn" id="exportCSV1">Exportar CSV</button>
         <button class="btn ghost" id="clearAll">Borrar todo</button>
       </div>
-    </div>
+    </section>
 
-    <!-- TAB: CASOS GUARDADOS -->
-    <div id="tab-casos" class="tab-content">
+    <!-- Casos -->
+    <section id="tab-casos" class="tab-content card">
       <h2>Casos Guardados</h2>
-      <input type="text" id="caseSearch" placeholder="Buscar por texto..." />
+      <input type="text" id="caseSearch" class="search" placeholder="Buscar…" />
 
-      <div id="casesList" style="margin-top:10px;"></div>
+      <div id="casesList" class="table-wrap"></div>
 
-      <div style="margin-top:10px;">
-        <label>Nombre caso:
-          <input type="text" id="caseName" placeholder="Nombre del hecho (se autocompleta al guardar)" />
+      <div class="grid g2">
+        <label>Nombre caso
+          <input type="text" id="caseName" placeholder="Se autocompleta al guardar" />
         </label>
       </div>
 
@@ -236,12 +224,10 @@
         <button class="btn" id="mergeJSON">Fusionar JSON</button>
       </div>
 
-      <!-- Inputs ocultos para restaurar/fusionar -->
       <input type="file" id="restoreFile" style="display:none" accept=".json" />
       <input type="file" id="mergeFile" style="display:none" accept=".json" />
-    </div>
+    </section>
   </main>
 </body>
 </html>
-
 
